@@ -1,4 +1,6 @@
-/* $Id: ChangeLog,v 1.2745 2004-12-04 10:21:53 sao2l02 Exp $ */
+/* $Id: ChangeLog,v 1.2746 2004-12-04 21:37:13 sao2l02 Exp $ */
+2004-12-04: Dietrich Teickner <dietrich_teickner@arcor   >
+    - Kernel32: o src\kernel32\hmthread.cpp snall correction
 2004-12-04: Dietrich Teickner <dietrich_teickner@arcor   >
     - libwrap:  o Splitting in 2 libs, the old makefile contains to large
                   macros for vac36 - environment or larger pathnames.
